[package]
name = "rust-tango"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "A lock-free, high-performance IPC channel inspired by Firedancer's Tango"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xfinetuned/rust-tango"
homepage = "https://github.com/0xfinetuned/rust-tango"
documentation = "https://docs.rs/rust-tango"
readme = "README.md"
exclude = ["Cargo.lock"]
keywords = ["lock-free", "channel", "ipc", "spsc", "zero-copy"]
categories = ["concurrency", "data-structures", "no-std"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
default = ["std"]
std = []
loom = ["dep:loom"]

[dependencies]
thiserror = { version = "2.0.18", optional = true }
loom = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
crossbeam-channel = "0.5"
ringbuf = "0.4"
loom = "0.7"
proptest = "1.5"

[[bench]]
name = "channel_comparison"
harness = false

[[test]]
name = "loom"
path = "tests/loom.rs"
required-features = ["loom"]
